# usb-mess

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs  model.rs  vdo.rs  watch.rs
src/render/: json.rs  text.rs
src/sysfs/: mod.rs  power_supply.rs  typec.rs
tests/: snapshot.rs  vdo.rs
tests/fixtures/sysfs/port_charging/class/power_supply/ucsi-source-psy-USBC000:001/: current_now  type
tests/fixtures/sysfs/port_partner_cable/class/typec/port0-cable/identity/: product_type_vdo1
tests/fixtures/sysfs/port_partner_cable/class/typec/port0-partner/identity/: id_header
tests/snapshots/: snapshot__one_port_no_partner_json.snap  snapshot__port_partner_cable_text.snap
