[package]
name = "usb-mess"
version = "0.1.1"
edition = "2021"
description = "Explain your USB-C cables and ports on Linux"
license = "MIT"
repository = "https://github.com/tazhate/usb-mess"

[dependencies]
anyhow = "1"
atty = "0.2"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
udev = "0.9"

[dev-dependencies]
insta = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
